WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307373
REGRESSION (
306126@main
): Illegal (cyclical) AVKit module dependency introduced (part 2)
https://bugs.webkit.org/show_bug.cgi?id=307373
Summary
REGRESSION (306126@main): Illegal (cyclical) AVKit module dependency introduc...
Tim Horton
Reported
2026-02-09 15:08:41 PST
REGRESSION (
306126@main
): Illegal (cyclical) AVKit module dependency introduced (part 2)
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2026-02-09 15:08:43 PST
<
rdar://problem/169989259
>
Tim Horton
Comment 2
2026-02-09 15:11:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58242
EWS
Comment 3
2026-02-09 16:28:27 PST
Committed
307122@main
(3f87b21d024a): <
https://commits.webkit.org/307122@main
> Reviewed commits have been landed. Closing PR #58242 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug