REGRESSION (306126@main): Illegal (cyclical) AVKit module dependency introduced (part 2) https://bugs.webkit.org/show_bug.cgi?id=307373 rdar://169989259

Reviewed by Andy Estes.

* Source/WebCore/PAL/pal/spi/cocoa/AVKitSPI.h:
See 306976@main for more details; I missed these last few.

Canonical link: https://commits.webkit.org/307122@main